Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2014-09-04)
------------------

- Add support for collections.
  [jone]


1.0.0 (2014-09-03)
------------------

- Initial implementation.