@@ -10,7 +10,10 @@ from ftw.testing import freeze
 from operator import attrgetter
 from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID
+from plone.registry.interfaces import IRegistry
+from Products.CMFCore.utils import getToolByName
 from unittest2 import TestCase
+from zope.component import getUtility
 import transaction
 
 
@@ -133,3 +136,21 @@ class TestActivityView(TestCase):
         self.assertEquals('activity', plone.view())
         self.assertTrue(browser.css('.documentEditable'),
                         'Editable border is not visible')
+
+    @browsing
+    def test_comments_do_not_break_activity_view(self, browser):
+        registry = getUtility(IRegistry)
+        registry['plone.app.discussion.interfaces'
+                 '.IDiscussionSettings.globally_enabled'] = True
+
+        types = getToolByName(self.layer['portal'], 'portal_types')
+        types['Document'].allow_discussion = True
+        transaction.commit()
+
+        page = create(Builder('document'))
+        browser.login().visit(page)
+        browser.fill({'Comment': 'Hello World'}).submit()
+        browser.visit(view='activity')
+        self.assertEquals(
+            1, len(activity.events()),
+            'Expected only page creation event to be visible.')
